--- a/home.html
+++ b/home.html
@@ -650,7 +650,7 @@
       <div
         class="end w-100 d-flex justify-content-center align-items-center bg-success text-white"
       >
-        <p>Copyright @2024 Aggregate Intelligence, Inc. All Rights Reserved.</p>
+        <p class="fw-semibold">Copyright <img class="mb-1" style="height: 17px;width: 20px;" src="images/copy.svg" alt="">2024 Aggregate Intelligence, Inc. All Rights Reserved.</p>
       </div>
     </div>
   </body>
