responsive image class added

--- a/home.html
+++ b/home.html
@@ -166,7 +166,7 @@
               </div>
             </div>
             <div class="col-md-6 mt-2">
-              <img src="images/img4.png" class="img2 row" />
+              <img src="images/img4.png" class="img-responsive row" />
               <div class="row justify-content-around mt-3">
                 <button class="btn btn-danger col-5">Try it for free</button>
                 <button class="btn btn-success col-5">Pricing</button>
