--- a/home.html
+++ b/home.html
@@ -255,7 +255,7 @@
                       <h5 class="mt-3">
                         BLUE WATER ACQUIRES ENDLESS CAVERNS IN S..
                       </h5>
-                      <p class="fs-12 op">
+                      <p class="fs-12">
                         Ocean city MD-based outdoor hospitality specialist,Blue
                         water, continues its rapid expansion with the recent
                         acquisition of endless caverns.Located on 265 acres in
@@ -279,7 +279,7 @@
                     <h5 class="ind mt-3">
                       Brown County Reforestation Camp Campground Rea..
                     </h5>
-                    <p class="ind1 fs-12 op">
+                    <p class="ind1 fs-12">
                       Brown County Parks hosted a Media Open House Tuesday, May
                       24, at the soon-to-be openBrown County Reforestation Camp
                       Campground-the first campground...
