--- a/home.html
+++ b/home.html
@@ -21,7 +21,9 @@
   </head>
   <body>
     <div class="container-fluid">
+      <!-- Header Section -->
       <div class="header-sec">
+        <!-- Navbar Section -->
         <nav class="navbar navbar-expand-md">
           <div class="container-fluid">
             <img class="img" src="images/img.png" alt="" />
@@ -66,7 +68,7 @@
             </div>
           </div>
         </nav>
-
+        <!-- Header Content -->
         <div class="second-sec">
           <div class="container d-flex flex-column justify-content-center">
             <div class="container-1">
@@ -97,19 +99,19 @@
                 <button type="submit" class="ob">Search</button>
               </div>
               <div class="col-auto"></div>
-              <button
-                type="submit"
-                class="cl btn bg-gr col-lg-2 col-md-3"
-              >
+              <button type="submit" class="cl btn bg-gr col-lg-2 col-md-3">
                 Advanced search
               </button>
             </div>
           </div>
         </div>
       </div>
+      <!-- Body Section -->
       <div class="body-sec">
         <div class="container">
+          <!-- First Section -->
           <div class="mt-5 row">
+            <!-- Left content -->
             <div class="col-md-6">
               <h3>
                 <span class="fw-semibold color">About</span
@@ -166,6 +168,7 @@
                 </div>
               </div>
             </div>
+            <!-- Right Side Image -->
             <div class="col-md-6 mt-2">
               <img src="images/img4.png" class="img2 row" />
               <div class="row justify-content-around mt-3">
@@ -174,6 +177,7 @@
               </div>
             </div>
           </div>
+          <!-- Second Section -->
           <div class="container mt-3">
             <h4>Understand Market Demand</h4>
             <p>
@@ -185,7 +189,7 @@
               new sites. Try Market Explore noe for free!
             </p>
           </div>
-
+          <!-- Third Section -->
           <div class="container d-flex flex-column align-items-center">
             <h2 class="fet2">TODAY'S FEATURED LISTINGS</h2>
             <button class="btn btn-outline-success mt-3">
@@ -239,12 +243,15 @@
               </div>
             </div>
           </div>
+          <!-- Fourth Section -->
           <div class="container d-flex flex-column align-items-center mt-3">
             <h2 class="fet2">INDUSTRY INSIGHTS</h2>
             <div
               class="d-flex flex-column justify-content-between mt-3 w-100 gap-3"
             >
+              <!-- First Row -->
               <div class="row">
+                <!-- Image Slider -->
                 <div
                   id="carouselExampleIndicators"
                   class="carousel slide col-md-8"
@@ -285,7 +292,6 @@
                         </div>
                       </div>
                     </div>
-
                     <div class="carousel-item h-100">
                       <div
                         class="cave h-100 d-flex justify-content-center align-items-center"
@@ -318,7 +324,6 @@
                         </div>
                       </div>
                     </div>
-
                     <div class="carousel-item h-100">
                       <div
                         class="cave h-100 d-flex justify-content-center align-items-center"
@@ -352,7 +357,6 @@
                       </div>
                     </div>
                   </div>
-
                   <div class="carousel-indicators">
                     <button
                       type="button"
@@ -375,7 +379,6 @@
                       aria-label="Slide 3"
                     ></button>
                   </div>
-
                   <a
                     class="carousel-control-prev"
                     href="#carouselExampleIndicators"
@@ -401,7 +404,7 @@
                     <span class="visually-hidden">Next</span>
                   </a>
                 </div>
-
+                <!-- Second divion in first row -->
                 <div class="d-flex flex-column gap-3 col-md-4">
                   <div class="cl border border-dark-subtle p-3">
                     <label class="fs-12 bg-danger p-1">Development news</label>
@@ -435,6 +438,7 @@
                   </div>
                 </div>
               </div>
+              <!-- Second Row -->
               <div class="row">
                 <div class="col-md-4 p-3">
                   <div class="border border-dark-subtle p-3">
@@ -490,6 +494,7 @@
               </div>
             </div>
           </div>
+          <!-- Fifth Section -->
           <div class="container d-flex flex-column align-items-center mt-3">
             <h2 class="fet2">FEATURED VENDORS</h2>
             <div class="row">
@@ -548,6 +553,7 @@
           </div>
         </div>
       </div>
+      <!-- Footer Section -->
       <div id="footer" class="w-100 bg-gr mt-5 text-white pb-3 pt-1">
         <div class="container mt-5 d-flex flex-column align-items-center">
           <h1 class="tc">SUBSCRIBE TO OUR NEWSLETTER</h1>
@@ -555,6 +561,7 @@
             Stay up-to-date on new listings,industry news, market insights,
             interviews and more!
           </p>
+          <!-- Input Section -->
           <form class="w-100" id="form" onsubmit="return validate()">
             <div class="foot mt-3 p-4">
               <div class="row mb-1">
@@ -699,7 +706,6 @@
                   <span id="fb-error" class="text-danger"></span>
                 </div>
               </div>
-
               <div class="row justify-content-end pe-3 pt-5">
                 <button class="btn btn-or col-2 or" type="submit">
                   SIGN ME UP!
@@ -707,6 +713,7 @@
               </div>
             </div>
           </form>
+          <!-- Contact Details -->
           <div class="row justify-content-between w-100">
             <div class="col-md-4 mt-3 p-0">
               <h4>CONTACT US</h4>
@@ -796,38 +803,20 @@
           </div>
         </div>
       </div>
-        <div
-          class="end w-100 d-flex justify-content-center align-items-center bg-success text-white"
-        >
-          <p class="fw-semibold">
-            Copyright
-            <img
-              class="mb-1"
-              style="height: 17px; width: 20px"
-              src="images/copy.svg"
-              alt=""
-            />2024 Aggregate Intelligence, Inc. All Rights Reserved.
-          </p>
-        </div>
+      <!-- Last Copyright Section -->
+      <div
+        class="end w-100 d-flex justify-content-center align-items-center bg-success text-white"
+      >
+        <p class="fw-semibold">
+          Copyright
+          <img
+            class="mb-1"
+            style="height: 17px; width: 20px"
+            src="images/copy.svg"
+            alt=""
+          />2024 Aggregate Intelligence, Inc. All Rights Reserved.
+        </p>
       </div>
-    <!-- <script>
-      $(document).ready(function () {
-        $("html").hover(function () {
-          $(".header-sec").fadeIn(1000);
-        });
-        $(".header-sec" || ".navbar  ").hover(function () {
-          $(".second-sec").fadeIn(1000);
-        });
-        $(".second-sec" || ".header-sec").hover(function () {
-          $(".body-sec").fadeIn(1000);
-        });
-        $(".body-sec").hover(function () {
-          $("#footer").fadeIn(1000);
-        });
-        $("#footer").hover(function () {
-          $("#end").fadeIn(500);
-        });
-      });
-    </script> -->
+    </div>
   </body>
 </html>
