--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
   <body>
     <div class="container-fluid">
       <!-- Header Section -->
-      <div class="header-sec">
+      <div id="header" class="header-sec">
         <!-- Navbar Section -->
         <nav class="navbar navbar-expand-md">
           <div class="container-fluid">
@@ -69,7 +69,7 @@
           </div>
         </nav>
         <!-- Header Content -->
-        <div class="second-sec">
+        <div id="second-sec" class="second-sec">
           <div class="container d-flex flex-column justify-content-center">
             <div class="container-1">
               <h2 class="color fs-3">
@@ -107,7 +107,7 @@
         </div>
       </div>
       <!-- Body Section -->
-      <div class="body-sec">
+      <div id="body" class="body-sec">
         <div class="container">
           <!-- First Section -->
           <div class="mt-5 row">
@@ -804,19 +804,32 @@
         </div>
       </div>
       <!-- Last Copyright Section -->
-      <div
+       <div id="end">
+        <div
         class="end w-100 d-flex justify-content-center align-items-center bg-success text-white"
-      >
-        <p class="fw-semibold">
-          Copyright
-          <img
-            class="mb-1"
-            style="height: 17px; width: 20px"
-            src="images/copy.svg"
-            alt=""
-          />2024 Aggregate Intelligence, Inc. All Rights Reserved.
-        </p>
-      </div>
+     >
+       <p class="fw-semibold">
+         Copyright
+         <img
+           class="mb-1"
+           style="height: 17px; width: 20px"
+           src="images/copy.svg"
+           alt=""
+         />2024 Aggregate Intelligence, Inc. All Rights Reserved.
+       </p>
+     </div>
+       </div>
     </div>
+    <script>
+      $(window).on("load",function(){
+    $("#header").delay(500).fadeIn();
+    $("#second-sec").delay(800).fadeIn();
+    $("#body").delay(1400).fadeIn();
+    $("#footer").delay(2400).fadeIn();
+    $("#end").delay(3000).fadeIn();
+      })
+
+
+    </script>
   </body>
 </html>
