Change content in image slider

--- a/home.html
+++ b/home.html
@@ -294,23 +294,22 @@
                     </div>
                     <div class="carousel-item h-100">
                       <div
-                        class="cave h-100 d-flex justify-content-center align-items-center"
+                        class="cave1 h-100 d-flex justify-content-center align-items-center"
                       >
                         <div
                           class="content d-flex justify-content-center align-items-center"
                         >
                           <div class="p-3 ms-5">
-                            <label class="fs-12 bg-gr p-1"
-                              >Recent Transactions</label
+                            <label class="fs-12 bg-mr p-1"
+                              >Finance News</label
                             >
-                            <h5 class="mt-3">
-                              BLUE WATER EXPANDS INTO THE MOUNTAINS
+                            <h5 class="ind mt-3">
+                              Expect a Lot of Turnover in Campground Ownership
                             </h5>
-                            <p class="fs-12">
-                              Continuing its growth, Blue Water has announced a
-                              new property acquisition in the scenic area of the
-                              Appalachian Mountains, enhancing its portfolio in
-                              outdoor hospitality.
+                            <p class="ind1 fs-12">
+                              There's a good chance for longtime RVers will see many new
+                              faces when they into their favourite campgrounds this
+                              summer.Campground owners are handing over t...
                             </p>
                             <div class="d-flex">
                               <img
@@ -326,23 +325,22 @@
                     </div>
                     <div class="carousel-item h-100">
                       <div
-                        class="cave h-100 d-flex justify-content-center align-items-center"
+                        class="cave2 h-100 d-flex justify-content-center align-items-center"
                       >
                         <div
                           class="content d-flex justify-content-center align-items-center"
                         >
                           <div class="p-3 ms-5">
-                            <label class="fs-12 bg-gr p-1"
-                              >Recent Transactions</label
+                            <label class="fs-12 bg-danger p-1"
+                              >Development news</label
                             >
-                            <h5 class="mt-3">
-                              BLUE WATER PARTNERS WITH LOCAL BUSINESSES
+                            <h5 class="ind mt-3">
+                              Brown County Reforestation Camp Campground Rea..
                             </h5>
-                            <p class="fs-12">
-                              In an effort to enhance guest experiences, Blue
-                              Water has formed partnerships with several local
-                              businesses, providing unique offerings and
-                              attractions for visitors.
+                            <p class="ind1 fs-12">
+                              Brown County Parks hosted a Media Open House Tuesday, May
+                              24, at the soon-to-be openBrown County Reforestation Camp
+                              Campground-the first campground ...
                             </p>
                             <div class="d-flex">
                               <img
