onload animation using keyframes

--- a/home.html
+++ b/home.html
@@ -802,32 +802,29 @@
         </div>
       </div>
       <!-- Last Copyright Section -->
-       <div id="end">
-        <div
-        class="end w-100 d-flex justify-content-center align-items-center bg-success text-white"
-     >
-       <p class="fw-semibold">
-         Copyright
-         <img
+      <div id="end">
+        <div class="end w-100 d-flex justify-content-center align-items-center bg-success text-white">
+          <p class="fw-semibold">
+          Copyright
+          <img
            class="mb-1"
            style="height: 17px; width: 20px"
            src="images/copy.svg"
            alt=""
-         />2024 Aggregate Intelligence, Inc. All Rights Reserved.
-       </p>
-     </div>
-       </div>
+          />2024 Aggregate Intelligence, Inc. All Rights Reserved.
+          </p>
+        </div>
+      </div>
     </div>
     <script>
       $(window).on("load",function(){
     $("#header").delay(500).fadeIn();
     $("#second-sec").delay(800).fadeIn();
-    $("#body").delay(1400).fadeIn();
+    $("#left").delay(800).fadeIn();
+    $("#body").delay(500).fadeIn();
     $("#footer").delay(2400).fadeIn();
     $("#end").delay(3000).fadeIn();
-      })
-
-
+      });
     </script>
   </body>
 </html>
