--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous"
     />
     <script src="script.js"></script>
+    <script src="http://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -60,7 +61,7 @@
                   <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                  <button type="button" class="lo btn bg-gr fs-6">
+                  <button type="button" class="btn btn-gr">
                     LogIn/SignUp
                   </button>
                 </li>
@@ -69,7 +70,7 @@
           </div>
         </nav>
         <!-- Header Content -->
-        <div id="second-sec" class="second-sec">
+        <div class="second-sec w-100 h-75">
           <div class="container d-flex flex-column justify-content-center">
             <div class="container-1">
               <h2 class="color fs-3">
@@ -96,10 +97,10 @@
                 class="search cl d-flex justify-content-center align-items-center bg-danger col-lg-1 col-md-2"
               >
                 <img src="images/img2.svg" class="img1" />
-                <button type="submit" class="ob">Search</button>
+                <button type="submit" class="btn text-white">Search</button>
               </div>
               <div class="col-auto"></div>
-              <button type="submit" class="cl btn bg-gr col-lg-2 col-md-3">
+              <button type="submit" class="cl fw-100 btn btn-gr col-lg-2 col-md-3">
                 Advanced search
               </button>
             </div>
@@ -107,12 +108,12 @@
         </div>
       </div>
       <!-- Body Section -->
-      <div id="body" class="body-sec">
+      <div class="body-sec">
         <div class="container">
           <!-- First Section -->
           <div class="mt-5 row">
             <!-- Left content -->
-            <div class="col-md-6">
+            <div class="col-md-6 ft-left">
               <h3>
                 <span class="fw-semibold color">About</span
                 ><span class="fw-semibold"
@@ -169,16 +170,16 @@
               </div>
             </div>
             <!-- Right Side Image -->
-            <div class="col-md-6 mt-2">
-              <img src="images/img4.png" class="img2 row" />
+            <div class="col-md-6 mt-2 ft-right">
+              <img src="images/img4.png" class="img-fluid" />
               <div class="row justify-content-around mt-3">
                 <button class="btn btn-danger col-5">Try it for free</button>
-                <button class="btn bg-gr col-5">Pricing</button>
+                <button class="btn btn-gr col-5">Pricing</button>
               </div>
             </div>
           </div>
           <!-- Second Section -->
-          <div class="container mt-3">
+          <div class="container mt-3 sc-sec">
             <h4>Understand Market Demand</h4>
             <p>
               The <a href="#" class="color">Market Explorer</a> platform offers
@@ -190,9 +191,9 @@
             </p>
           </div>
           <!-- Third Section -->
-          <div class="container d-flex flex-column align-items-center">
-            <h2 class="fet2">TODAY'S FEATURED LISTINGS</h2>
-            <button class="btn btn-outline-success mt-3">
+          <div class="container d-flex mt-3 flex-column align-items-center third-sec">
+            <h2 class="fet2 tc">TODAY'S FEATURED LISTINGS</h2>
+            <button class="btn btn-outline-success border border-success mt-3">
               View All Listings
             </button>
             <div class="row col-12 mt-3 gap-3 justify-content-between">
@@ -245,12 +246,12 @@
           </div>
           <!-- Fourth Section -->
           <div class="container d-flex flex-column align-items-center mt-3">
-            <h2 class="fet2">INDUSTRY INSIGHTS</h2>
+            <h2 class="fet2 tc">INDUSTRY INSIGHTS</h2>
             <div
               class="d-flex flex-column justify-content-between mt-3 w-100 gap-3"
             >
               <!-- First Row -->
-              <div class="row">
+              <div class="row show-lft">
                 <!-- Image Slider -->
                 <div
                   id="carouselExampleIndicators"
@@ -403,7 +404,7 @@
                   </a>
                 </div>
                 <!-- Second divion in first row -->
-                <div class="d-flex flex-column gap-3 col-md-4">
+                <div class="d-flex flex-column gap-3 col-md-4 show-rgt">
                   <div class="cl border border-dark-subtle p-3">
                     <label class="fs-12 bg-danger p-1">Development news</label>
                     <h5 class="ind mt-3">
@@ -438,7 +439,7 @@
               </div>
               <!-- Second Row -->
               <div class="row">
-                <div class="col-md-4 p-3">
+                <div class="col-md-4 p-3 show-lft">
                   <div class="border border-dark-subtle p-3">
                     <label class="fs-12 bg-mr p-1">Finance News</label>
                     <h5 class="ind mt-3">
@@ -455,7 +456,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4 p-3">
+                <div class="col-md-4 p-3 show-lft">
                   <div class="border border-dark-subtle p-3">
                     <label class="fs-12 bg-danger p-1">Development news</label>
                     <h5 class="ind mt-3">
@@ -472,7 +473,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4 p-3">
+                <div class="col-md-4 p-3 show-rgt">
                   <div class="border border-dark-subtle p-3">
                     <label class="fs-12 bg-gr p-1">Recent Transactions</label>
                     <h5 class="ind mt-3">
@@ -493,8 +494,8 @@
             </div>
           </div>
           <!-- Fifth Section -->
-          <div class="container d-flex flex-column align-items-center mt-3">
-            <h2 class="fet2">FEATURED VENDORS</h2>
+          <div class="container d-flex flex-column align-items-center mt-3 third-sec">
+            <h2 class="fet2 tc">FEATURED VENDORS</h2>
             <div class="row">
               <div class="cl col-md-4">
                 <div class="card">
@@ -552,7 +553,7 @@
         </div>
       </div>
       <!-- Footer Section -->
-      <div id="footer" class="w-100 bg-gr mt-5 text-white pb-3 pt-1">
+      <div class="w-100 bg-gr mt-5 text-white pb-3 pt-1">
         <div class="container mt-5 d-flex flex-column align-items-center">
           <h1 class="tc">SUBSCRIBE TO OUR NEWSLETTER</h1>
           <p class="tc">
@@ -560,8 +561,8 @@
             interviews and more!
           </p>
           <!-- Input Section -->
-          <form class="w-100" id="form" onsubmit="return validate()">
-            <div class="foot mt-3 p-4">
+          <form class="w-100 third-sec " id="form" onsubmit="return validate()">
+            <div class="foot rounded-3 mt-3 p-4">
               <div class="row mb-1">
                 <div class="col-md-4">
                   <label class="text-black row">First name</label>
@@ -705,7 +706,7 @@
                 </div>
               </div>
               <div class="row justify-content-end pe-3 pt-5">
-                <button class="btn btn-or col-2 or" type="submit">
+                <button class="btn btn-or col-md-2 col-5 or" type="submit">
                   SIGN ME UP!
                 </button>
               </div>
@@ -713,13 +714,13 @@
           </form>
           <!-- Contact Details -->
           <div class="row justify-content-between w-100">
-            <div class="col-md-4 mt-3 p-0">
+            <div class="col-md-4 mt-3 p-0 show-lft">
               <h4>CONTACT US</h4>
               <div class="hr"></div>
               <div class="d-flex flex-column gap-3 mt-3 align-items-start">
                 <div class="d-flex gap-2">
                   <img class="img1" src="images/location.svg" alt="" />
-                  <p class="">26400 Lasher Rd, suite 210 Southfield,MI 48033</p>
+                  <p>26400 Lasher Rd, suite 210 Southfield,MI 48033</p>
                 </div>
                 <div class="d-flex gap-2">
                   <img class="img1" src="images/envelope.svg" alt="" />
@@ -744,7 +745,7 @@
                 /></a>
               </div>
             </div>
-            <div class="col-md-4 mt-3">
+            <div class="col-md-4 mt-3 third-sec">
               <h4>QUICK LINKS</h4>
               <div class="hr"></div>
               <ul class="mt-3">
@@ -762,38 +763,38 @@
                 <a href="#" class="call"><li class="mt-2">About Us</li></a>
               </ul>
             </div>
-            <div class="col-md-4 mt-3 pe-0">
+            <div class="col-md-4 mt-3 pe-0 show-rgt">
               <h4>NEW PROPERTIES</h4>
               <div class="hr"></div>
               <div class="d-flex mt-3 gap-2">
                 <img class="img6" src="images/holly.jpg" />
-                <div class="">
-                  <p class="">2439 McKinley St, Hollywood, FL 33020</p>
+                <div>
+                  <p>2439 McKinley St, Hollywood, FL 33020</p>
                   <div class="d-flex gap-2">
                     <img class="img1" src="images/calendar2.svg" />
-                    <p class="">07/26/2024</p>
+                    <p>07/26/2024</p>
                   </div>
                 </div>
               </div>
               <div class="hl mt-3"></div>
               <div class="d-flex mt-3 gap-2">
                 <img class="img6" src="images/noimg.jpg" />
-                <div class="">
-                  <p class="">2437 McKinley St, Hollywood, FL 33020</p>
+                <div>
+                  <p>2437 McKinley St, Hollywood, FL 33020</p>
                   <div class="d-flex gap-2">
                     <img class="img1" src="images/calendar2.svg" />
-                    <p class="">07/26/2024</p>
+                    <p>07/26/2024</p>
                   </div>
                 </div>
               </div>
               <div class="hl mt-3"></div>
               <div class="d-flex mt-3 gap-2">
                 <img class="img6" src="images/noimg.jpg" />
-                <div class="">
-                  <p class="">2436 McKinley St, Hollywood, FL 33020</p>
+                <div>
+                  <p>2436 McKinley St, Hollywood, FL 33020</p>
                   <div class="d-flex gap-2">
                     <img class="img1" src="images/calendar2.svg" />
-                    <p class="">07/26/2024</p>
+                    <p>07/26/2024</p>
                   </div>
                 </div>
               </div>
@@ -802,8 +803,7 @@
         </div>
       </div>
       <!-- Last Copyright Section -->
-      <div id="end">
-        <div class="end w-100 d-flex justify-content-center align-items-center bg-success text-white">
+        <footer class="end w-100 d-flex justify-content-center align-items-center bg-success text-white">
           <p class="fw-semibold">
           Copyright
           <img
@@ -813,18 +813,59 @@
            alt=""
           />2024 Aggregate Intelligence, Inc. All Rights Reserved.
           </p>
-        </div>
-      </div>
+        </footer>
     </div>
     <script>
-      $(window).on("load",function(){
-    $("#header").delay(500).fadeIn();
-    $("#second-sec").delay(800).fadeIn();
-    $("#left").delay(800).fadeIn();
-    $("#body").delay(500).fadeIn();
-    $("#footer").delay(2400).fadeIn();
-    $("#end").delay(3000).fadeIn();
-      });
+    if(window.innerWidth > 592){
+    window.sr = ScrollReveal();
+     sr.reveal('.navbar',{
+      duration:2000,
+      origin:'bottom'
+     });
+     sr.reveal('.second-sec',{
+      duration:2000,
+      origin:'left',
+      distance:'300px'
+     });
+     sr.reveal('.ft-left',{
+      duration:2000,
+      origin:'left',
+      distance:'300px'
+     });
+     sr.reveal('.ft-right',{
+      duration:2000,
+      origin:'top',
+      distance:'300px'
+     });
+     sr.reveal('.sc-sec',{
+      duration:2000,
+      origin:'left',
+      distance:'300px'
+     });
+     sr.reveal('.third-sec',{
+      duration:2000,
+      origin:'bottom',
+      distance: '300px',
+      viewFactor: 0.2
+     });
+     sr.reveal('.show-lft',{
+      duration:2000,
+      origin:'left',
+      distance: '300px',
+      viewFactor: 0.2
+     });
+     sr.reveal('.show-rgt',{
+      duration:2000,
+      origin:'right',
+      distance: '300px',
+      viewFactor: 0.2
+     });
+     sr.reveal('.tc',{
+      duration:2000,
+      origin:'bottom',
+      viewFactor: 0.2
+     });
+        }
     </script>
   </body>
 </html>
